--- a/temas.css
+++ b/temas.css
@@ -1,36 +1,419 @@
-.contenedor{
+.contenedor{                                 
+
+
+
     width: 100%;
-    height: 1200px;
-    background-color: aqua;
+    height: 1400px;
+background-color: blueviolet;
+ 
 }
 .encabezado{
     width: 100%;
-    height: 150px;
-    background-color: aquamarine;
+    height: 250px;
+    background-color: crimson;
 }
 .menu{
-    width: 100%;
-    height: 50px;
-    background-color: chartreuse;
+width: 100%;
+height: 80px;
+background-color: rgb(33, 206, 168);
+
+
 }
 .contenedor2{
+
     width: 100%;
-    height: 1000px;
-    background-color: cornflowerblue;
-    display: flex;
-}
-.izquierda{
-    width: 20%;
-    height: 1000px;
-    background-color: blue;
-}
-.centro{
-    width: 60%;
-    height: 1000px;
-    background-color: darkcyan;
-}
-.dercha{
-    width: 20%;
-    height: 1000px;
+    height: 1200px;
     background-color: darkgoldenrod;
+    
 }
+.izquierdo{
+    width: 60%;
+    height: 1200px;
+    background-color: darkred;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
