--- a/temas.css
+++ b/temas.css
@@ -1,57 +1,22 @@
 .contenedor{ 
+
+
+
     width: 100%;
     height: 1400px;
-    background-color: rgb(247, 0, 255);
+    background-color: blue;
 }
 .encabezado{
     width: 100%;
     height: 150px;
-    background-color: rgb(0, 235, 243);
-    text-align: center;
-    font-size: 35px;
+    background-color: cornflowerblue;
 }
 .menu{
     width: 100%;
     height: 80px;
-    background-color: rgb(255, 213, 252);
+    background-color: cyan;
     display: flex;
-
 }
-.tecnologia{
-
-    width: 100px;
-    height: 78px;
-    background-color: beige;
-    margin: 2px;
-    }
-    
-    .ingles{
-        width: 100px;
-        height: 78px;
-        background-color: burlywood;
-        margin: 2px;
-    }
-    
-    .biologia{
-        width: 100px;
-        height: 78px;
-        background-color: ghostwhite;
-        margin: 2px;
-    }
-    
-    .sociales{
-        width: 100px;
-        height: 78px;
-        background-color: indianred;
-        margin: 2px;
-    }
-    
-    .matematicas{
-        width: 100px;
-        height: 78px;
-        background-color: mediumpurple;
-        margin: 2px;
-    }
 .contenedor2{
     display: flex;
 width: 100%;
@@ -61,15 +26,29 @@ background-color:blueviolet ;
 .izquierda{
     width: 20%;
     height: 1200px;
-    background-color: rgb(0, 247, 255);
+    background-color: cadetblue;
 }
 .centro{
 width: 60%;
 height: 1200px;
-background-color: rgb(81, 255, 0);
+background-color: blanchedalmond;
 }
 .derecho{
     width: 20%;
     height: 1200px;
-    background-color: rgb(255, 20, 20);
+background-color: deeppink;
 }
+
+.SOCIALES{
+    width: 100px;
+    height: 78px;
+background-color: blue;
+
+.biologia{
+    width: 100px;
+    height: 78px;
+background-color:rgb(219,157,81);
+
+.matematicas{
+    width: 100px;
+height: 78px;
