--- a/temas.css
+++ b/temas.css
@@ -1,54 +1,71 @@
-.contenedor{ 
-
-
-
+.contenedor{
     width: 100%;
-    height: 1400px;
+    height: 1200px;
     background-color: blue;
 }
 .encabezado{
     width: 100%;
     height: 150px;
-    background-color: cornflowerblue;
+    background-color: purple;
+
+    font-size: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(12, 11, 11);
+    text-align: center;
 }
 .menu{
     width: 100%;
-    height: 80px;
-    background-color: cyan;
+    height: 54px;
+    background-color: rgb(70, 20, 128);
     display: flex;
 }
+.Tecnologia{
+    width: 100px;
+    height: 48px;
+    background-color: rgb(19, 12, 80);
+    margin: 2px;
+    text-align: center;
+}
+.Sociales{
+    width: 100px;
+    height: 48px;
+    background-color: rgb(82, 236, 11);
+    margin: 2px;
+    text-align: center;
+}
+.Biologia{
+    width: 100px;
+    height: 48px;
+    background-color: rgb(10, 27, 59);
+    margin: 2px;
+    text-align: center;
+}
+.Matematicas{
+    width: 100px;
+    height: 48px;
+    background-color: rgb(34, 243, 7);
+    margin: 2px;
+    text-align: center;
+}
 .contenedor2{
+    width: 100%;
+    height: 1000px;
+    background-color:mediumorchid;
     display: flex;
-width: 100%;
-height: 1200px;
-background-color:blueviolet ;
 }
 .izquierda{
     width: 20%;
-    height: 1200px;
-    background-color: cadetblue;
+    height: 1000px;
+    background-color:mediumorchid;
+    text-align: center;
 }
 .centro{
-width: 60%;
-height: 1200px;
-background-color: blanchedalmond;
+    width: 60%;
+    height: 1000px;
+    background-color: purple;
 }
-.derecho{
+.dercha{
     width: 20%;
-    height: 1200px;
-background-color: deeppink;
+    height: 1000px;
+    background-color:rgb(255, 255, 255);
 }
-
-.SOCIALES{
-    width: 100px;
-    height: 78px;
-background-color: blue;
-
-.biologia{
-    width: 100px;
-    height: 78px;
-background-color:rgb(219,157,81);
-
-.matematicas{
-    width: 100px;
-height: 78px;
