--- a/temas.css
+++ b/temas.css
@@ -1,12 +1,12 @@
 .contenedor{
     width: 100%;
     height: 1200px;
-    background-color: blue;
+    background-color: rgb(250, 189, 255);
 }
 .encabezado{
     width: 100%;
     height: 150px;
-    background-color: purple;
+    background-color: rgb(225, 0, 255);
 
     font-size: 35px;
     font-family: Arial, Helvetica, sans-serif;
@@ -16,56 +16,57 @@
 .menu{
     width: 100%;
     height: 54px;
-    background-color: rgb(70, 20, 128);
+    background-color: rgb(32, 190, 218);
     display: flex;
 }
 .Tecnologia{
     width: 100px;
     height: 48px;
-    background-color: rgb(19, 12, 80);
+    background-color: rgb(223, 194, 250);
     margin: 2px;
     text-align: center;
 }
 .Sociales{
     width: 100px;
     height: 48px;
-    background-color: rgb(82, 236, 11);
+    background-color: rgb(255, 165, 143);
     margin: 2px;
     text-align: center;
 }
 .Biologia{
     width: 100px;
     height: 48px;
-    background-color: rgb(10, 27, 59);
+    background-color: cornflowerblue;
     margin: 2px;
     text-align: center;
 }
 .Matematicas{
     width: 100px;
     height: 48px;
-    background-color: rgb(34, 243, 7);
+    background-color: rgb(23, 115, 253);
     margin: 2px;
     text-align: center;
 }
 .contenedor2{
     width: 100%;
     height: 1000px;
-    background-color:mediumorchid;
+    background-color: rgb(210, 255, 214);
     display: flex;
 }
 .izquierda{
     width: 20%;
     height: 1000px;
-    background-color:mediumorchid;
+    background-color: rgb(255, 222, 222);
     text-align: center;
 }
 .centro{
     width: 60%;
     height: 1000px;
-    background-color: purple;
+    background-color: rgb(145, 152, 214);
+    text-align: center;
 }
 .dercha{
     width: 20%;
     height: 1000px;
-    background-color:rgb(255, 255, 255);
+    background-color:rgb(0, 0, 0);
 }
