--- a/estilos.css
+++ b/estilos.css
@@ -11,7 +11,7 @@
     
     body{
     
-    background-image: url("fondo.jpg");
+    background-image: url("fondo.webp");
     
     background-repeat: no-repeat;
     background-size: cover;
